--- a/src/components/nav.module.scss
+++ b/src/components/nav.module.scss
@@ -1,10 +1,17 @@
-.title {
-    direction: rtl;
-}
-
 .navstyle {
     display: flex;
     direction: rtl;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 3px solid #dadada;
+}
+
+.activeBurger {
+    transition: all 0.5s ease;
+    opacity: 0;
+}
+
+.button {
+    background: transparent;
+    border: none;
 }
