--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -3,36 +3,55 @@
     flex-direction: column;
 }
 
-.picture {
-    width: 50%;
-    overflow: hidden;
-
-}
 
 .cardItem {
     clear: both;
-    border-bottom: 1px solid #dadada;;
-    padding: 1.5vw;
+    border-bottom: 1px solid #dadada;
+    padding: 2vw;
     display: flex;
-    justify-content: space-between;
-    height: 200px;
-}
-.cardItem:nth-child(odd) {
-    flex-direction: row;
-    .text {
-        padding-left: 3vw;
+    overflow: hidden;
+    &:nth-child(odd) {
+        flex-direction: row;
+        .text {
+            margin-left: 1.5vw;
+        }
+        h1 {
+            padding-left: 1.5vw;
+        }
+        p {
+            padding-left: 1.5vw;
+        }
+        @media (max-width: 900px) {
+            flex-direction: column;
+        }
     }
-}
-.cardItem:nth-child(even) {
-    flex-direction: row-reverse;
-    .text {
-        padding-right: 3vw;
+    &:nth-child(even) {
+        flex-direction: row-reverse;
+        /* if you don't want a straight line in the middle,
+        substitute the h1 and p tag with .text */
+        h1 {
+            margin-right: 1.5vw;
+        }
+        p {
+            margin-right: 1.5vw;
+        }
+        .picture {
+            margin-left: 1.5vw;
+        }
+        @media (max-width: 900px) {
+            flex-direction: column;
+        }
     }
-}
-
-.text {
-    width: 50%;
-    p {
-        margin-top: 0;
+    .text {
+        min-width: 50%;
+        @media (max-width: 800px) {
+        }
+    }
+    .picture {
+        border-radius: 1.5%;
+        height: 100%;
+        &:hover{
+            opacity: 0.9;
+        }
     }
 }
