--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,9 @@
 body {
-    background-color: papayawhip;
-
+    background-color: white;
+    font-family: "Amiri", sans-serif;
+    p {
+        line-height: 1.7em;
+    }
 }
 
 a {
