--- a/src/components/menu.module.scss
+++ b/src/components/menu.module.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: papayawhip;
+    background-color: white;
     @media (max-width: 1000px) {
         width: 30vw;
     }
