--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -17,9 +17,13 @@
         }
         h1 {
             padding-left: 1.5vw;
+            margin-left: 1.5vw;
+
         }
         p {
             padding-left: 1.5vw;
+            margin-left: 1.5vw;
+
         }
         @media (max-width: 900px) {
             flex-direction: column;
@@ -31,9 +35,11 @@
         substitute the h1 and p tag with .text */
         h1 {
             margin-right: 1.5vw;
+            padding-right: 1.5vw;
         }
         p {
             margin-right: 1.5vw;
+            padding-right: 1.5vw;
         }
         .picture {
             margin-left: 1.5vw;
@@ -48,6 +54,7 @@
         }
     }
     .picture {
+        min-width: 50%;
         border-radius: 1.5%;
         height: 100%;
         &:hover{
