--- a/src/components/nav.module.scss
+++ b/src/components/nav.module.scss
@@ -1,17 +1,15 @@
 .navstyle {
     display: flex;
-    direction: rtl;
     align-items: center;
     justify-content: space-between;
     border-bottom: 3px solid #6f7380;
-    a {
-        color: black;
+    h1 {
+        font-size: 2.3em;
     }
 }
 
 .activeBurger {
     transition: all 0.5s ease;
-    opacity: 0;
 }
 
 .button {
